--- a/README
+++ b/README
@@ -21,8 +21,9 @@ defeating the goal of being able to edit with a client of your choice.
 sieve-connect speaks MANAGESIEVE and supports TLS for connection privacy
 and also authentication if using client certificates.  sieve-connect
 will use SASL authentication; SASL integrity layers are not supported,
-use TLS instead.  GSSAPI authentication works on some platforms, the
-cause of failures on others is still being diagnosed.
+use TLS instead.  GSSAPI-based authentication should generally work,
+provided that client and server can use a common underlaying protocol.
+If it doesn't work for you, please report the issue.
 
 sieve-connect is designed to be both a tool which can be invoked from
 scripts and also a decent interactive client.  It should also be a
