--- a/README
+++ b/README
@@ -63,6 +63,27 @@ Pre-Requisites
  various other Perl modules which are shipped with Perl itself
 
 
+Problems
+========
+
+If Perl segfaults upon exit, then this is very probably a Perl/Readline
+interaction.  You can confirm this by using an option such as --list to
+avoid entering a command-loop, and then by passing PERL_RL=Perl in the
+environment to sieve-connect.  Eg:
+  $ env PERL_RL=Perl sieve-connect
+
+If that avoids the failure on exit, then you appear to be affected by:
+  http://rt.cpan.org/Public/Bug/Display.html?id=37194
+
+Rather than rebuild Perl with -DPERL_USE_SAFE_PUTENV, when this affected me I
+chose to avoid having readline mess with $LINES/$COLUMNS and just edited
+readline-$VER/terminal.c to disable the call to sh_set_lines_and_columns().
+
+
+If you experience any other problems, or have better solutions to the above,
+please report them.
+
+
 Notes about release and packaging
 =================================
 
