Fix TLS verification; find server by own hostname & SRV.
* TLS hostname verification was not actually happening.  I'm mortified.

  * IO::Socket::SSL requirement bumped to 1.14 (was 0.97).

* By default, if no server specified, before falling back to localhost try to 
  use the current hostname and SRV records in DNS to figure out if Sieve is 
  available.  Checks for sieve, imaps & imap protocol SRV records and honours
  target==. to mean "no".

  * This works better with the Mozilla::PublicSuffix module installed.

* Added ability to blacklist authentication mechanisms

--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ Things that sieve-connect would like for xmas.
  * A full test-suite to torture the client.
  * Support for referrals
    * A server which does this so it can be tested
+ * DANE support for chasing TLS expected hostnames out of verified DNS
  * Figuring out sensible things to do with response codes in general
  * Figuring out what's going on with the isode implementation and the Perl
    SASL libraries that breaks authentication.
