--- a/README
+++ b/README
@@ -56,12 +56,13 @@ Pre-Requisites
  Perl5
  Authen::SASL
  IO::Socket::INET6
- IO::Socket::SSL      0.97 or greater
+ IO::Socket::SSL         1.14 or greater
+ Mozilla::PublicSuffix   optional; automatic server location
  Net::DNS
  Pod::Usage
- Term::ReadKey 	      optional; password prompting without echo
- Term::ReadLine       optional; improves interactive mode
- Term::ReadLine::Gnu  optional; adds tab-completion
+ Term::ReadKey           optional; password prompting without echo
+ Term::ReadLine          optional; improves interactive mode
+ Term::ReadLine::Gnu     optional; adds tab-completion
  various other Perl modules which are shipped with Perl itself
 
 
@@ -80,6 +81,14 @@ If that avoids the failure on exit, then you appear to be affected by:
 Rather than rebuild Perl with -DPERL_USE_SAFE_PUTENV, when this affected me I
 chose to avoid having readline mess with $LINES/$COLUMNS and just edited
 readline-$VER/terminal.c to disable the call to sh_set_lines_and_columns().
+
+
+On some platforms, bad interactions between the Authen::SASL::Perl module's
+GSSAPI support and the platform GSSAPI libraries have been observed to cause
+Perl to segfault during authentication.  If you observe this and fixing your
+libraries is not an option, take a look at the %blacklist_auth_mechanisms
+definition in the user-editable part of the script and force-disable the
+mechanism which has broken platform Perl support.
 
 
 If you experience any other problems, or have better solutions to the above,
