sieve todo updates, belated commit

--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
+Things to happen before I cut a 1.0 release:
+
+ * Write the test suite
+   * Bring up pysieved on multiple ports with various certificates and some
+     DNS set up to aid testing.
+ * Switch to Git, use GitHub with a public issue-tracker
+ * SASLprep
+
 Things that sieve-connect would like for xmas.
 
  * A full test-suite to torture the client.
